--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
         <!-- ナビゲーション -->
         <nav class="nav">
-            <button class="nav-btn active" data-tab="participants">参加者管理</button>
-            <button class="nav-btn" data-tab="competitions">コンペ管理</button>
+            <button class="nav-btn" data-tab="participants">参加者管理</button>
+            <button class="nav-btn active" data-tab="competitions">コンペ管理</button>
             <button class="nav-btn" data-tab="attendance">出欠管理</button>
             <button class="nav-btn" data-tab="reports">レポート</button>
         </nav>
 
         <!-- 参加者管理タブ -->
-        <div id="participantsTab" class="tab-content active">
+        <div id="participantsTab" class="tab-content">
             <div class="section-header">
                 <h2>参加者管理</h2>
                 <button id="addParticipantBtn" class="btn btn-primary">参加者追加</button>
@@ -63,7 +63,7 @@
         </div>
 
         <!-- コンペ管理タブ -->
-        <div id="competitionsTab" class="tab-content">
+        <div id="competitionsTab" class="tab-content active">
             <div class="section-header">
                 <h2>コンペ管理</h2>
                 <button id="addCompetitionBtn" class="btn btn-primary">コンペ追加</button>
